--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -679,6 +679,7 @@ if(ARM)
 		Core/MIPS/ARM/ArmCompFPU.cpp
 		Core/MIPS/ARM/ArmCompLoadStore.cpp
 		Core/MIPS/ARM/ArmCompVFPU.cpp
+		Core/MIPS/ARM/ArmCompVFPUNEON.cpp
 		Core/MIPS/ARM/ArmJit.cpp
 		Core/MIPS/ARM/ArmJit.h
 		Core/MIPS/ARM/ArmRegCache.cpp
